--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,5 +42,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:19.2.0'
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.firebase:geofire-java:3.0.0'
+    implementation 'com.github.bumptech.glide:glide:4.7.1'
+
 
 }
