--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation 'com.google.firebase:firebase-auth:19.2.0'
+    implementation 'com.google.firebase:firebase-messaging:20.2.0'
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.firebase:geofire-java:3.0.0'
     implementation 'com.github.bumptech.glide:glide:4.7.1'
