--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,5 +49,7 @@ dependencies {
 
     implementation 'com.firebase:geofire-java:3.0.0'
 
+    implementation 'com.github.jd-alexander:library:1.1.0'
+
 
 }
