Display all requests to Backpack List

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,11 +21,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".AllRequest_BackpackActivity"></activity>
+        <activity android:name=".AllRequestBackPackActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+
         <activity
             android:name=".AllRequestsActivity"
             android:parentActivityName=".StoreProfileActivity"
-            android:theme="@style/AppTheme.Requests"></activity>
+            android:theme="@style/AppTheme.Requests" />
         <activity android:name=".RequestReceivedActivity" />
 
         <meta-data
@@ -59,11 +62,11 @@
         <activity android:name=".RequestPhoneNumberActivity" />
         <activity android:name=".Store_locationActivity" />
         <activity android:name=".StoresLoginActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
         </activity>
         <activity
             android:name=".DriverMapActivity"
@@ -74,12 +77,12 @@
             android:name=".SplashView"
             android:theme="@style/AppTheme.NoActionBar">
 
-            <!-- <intent-filter> -->
-            <!-- <action android:name="android.intent.action.MAIN" /> -->
+             <intent-filter>
+             <action android:name="android.intent.action.MAIN" />
 
 
-            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
-            <!-- </intent-filter> -->
+             <category android:name="android.intent.category.LAUNCHER" />
+             </intent-filter>
         </activity>
 
         <service
